# openmp-imageprocessor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.bat  setup.sh
src/: ImageProcessor.cpp  ImageProcessor.h  PerformanceTimer.cpp  PerformanceTimer.h  main.cpp
